--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -6,6 +6,8 @@
     "@types/node": "^16.18.93",
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.23",
+    "mobx": "^6.12.3",
+    "mobx-react-lite": "^4.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
