Implement Ability to Switch between Light and Dark Theme (#23)
* converted current state of react frontend to typescript

* commented out windows lines for easier development

* user profile path changed for dev

* Updated frontend README.md

* mobx integrated and functional + readme updated

* optimized text toggle with useEffect()

* created Header component

* header done and dark mode working

* set default theme based on user preference

--- a/src/frontend/tsconfig.json
+++ b/src/frontend/tsconfig.json
@@ -21,6 +21,5 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src"
-, "src/MainStore.tsx", "src/MainStoreContext.tsx"  ]
+    "src", "src/MainStore.tsx", "src/MainStoreContext.tsx"  ]
 }
