Getting API key from environment variable

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ src/frontend/build
 
 # misc
 src/frontend/.DS_Store
+src/frontend/.env
 src/frontend/.env.local
 src/frontend/.env.development.local
 src/frontend/.env.test.local
