Violating sites display (#27)
* converted current state of react frontend to typescript

* commented out windows lines for easier development

* user profile path changed for dev

* Updated frontend README.md

* mobx integrated and functional + readme updated

* optimized text toggle with useEffect()

* created Header component

* header done and dark mode working

* set default theme based on user preference

* created component that displays violating sites from json

* table styling done

* calling google api to get and display recent violating sites

* Getting API key from environment variable

* display loading icon when waiting on sites from API + styling adjustments

* deleted unnecessary files and defaulting violating sites for testing

* avoiding get new sites cutoff issue but now have new overflow issues

* header no longer cuts off "Get New Sites" button

--- a/src/frontend/tsconfig.json
+++ b/src/frontend/tsconfig.json
@@ -21,5 +21,6 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src", "src/MainStore.tsx", "src/MainStoreContext.tsx"  ]
+    "src"
+, "src/MainStore.tsx", "src/MainStoreContext.tsx"  ]
 }
