--- a/.gitignore
+++ b/.gitignore
@@ -4,14 +4,19 @@
 .venv
 
 src/google.py
-src/chromedriver
-src/violations.txt
+src/flask-server/chromedriver
+src/flask-server/violations.txt
 
 # --- Frontend
 # dependencies
 src/frontend/node_modules
 src/frontend/.pnp
 src/frontend/.pnp.js
+
+# Flask Server
+# dependencies
+__pycache__
+~
 
 # testing
 src/frontend/coverage
@@ -30,3 +35,4 @@ src/frontend/.env.production.local
 src/frontend/npm-debug.log*
 src/frontend/yarn-debug.log*
 src/frontend/yarn-error.log*
+src/flask-server/venv
