--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -12,8 +12,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "url-exist": "^3.0.1"
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
