moved several files from .src/flask-server to ./src and adjusted .gitignore accordingly

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@
 .venv
 
 src/google.py
-src/flask-server/chromedriver
-src/flask-server/violations.txt
+src/chromedriver
+src/violations.txt
 
 # --- Frontend
 # dependencies
@@ -15,7 +15,7 @@ src/frontend/.pnp.js
 
 # Flask Server
 # dependencies
-__pycache__
+**/*__pycache__
 ~
 
 # testing
@@ -35,4 +35,3 @@ src/frontend/.env.production.local
 src/frontend/npm-debug.log*
 src/frontend/yarn-debug.log*
 src/frontend/yarn-error.log*
-src/flask-server/venv
