Fix Suggestions Display for Violating Sites (#31)
* setup flask for sending violations.txt content to frontend

* displaying violation fix text acquired from backend

* displaying generic site violation text per-row unformatted

* performed formatting for violation suggestions preview

* Fix Suggestion Display Code Consolidation (#29)

* converted current state of react frontend to typescript

* commented out windows lines for easier development

* user profile path changed for dev

* Updated frontend README.md

* mobx integrated and functional + readme updated

* optimized text toggle with useEffect()

* created Header component

* header done and dark mode working

* set default theme based on user preference

* created component that displays violating sites from json

* table styling done

* calling google api to get and display recent violating sites

* Getting API key from environment variable

* display loading icon when waiting on sites from API + styling adjustments

* WIP: Trying to filter out websites that do not exist

* WIP: created Flask server to help communicate backend with frontend; still working on checking if a URL exists, correctly all URLs return false

* WIP: created Flask server to help communicate backend with frontend; still working on checking if a URL exists, correctly all URLs return false

* WIP: Sites are being categorized as existing or non existing correctly, issue is there are too many sites to go through and we do not have proper resources to do this in a timely manner

* Getting violations.txt by running AdHere in Flask Server

---------

Co-authored-by: KShervington <kyle.shervington@gmail.com>
Co-authored-by: KShervington <54691558+KShervington@users.noreply.github.com>
Co-authored-by: Dhruvi Shah <dhruvishah549@gmail.com>

* made frontend mods to accomodate backend functionality integration & updated AdHere.py to selenium 4-supported code

* remove StrictMode to prevent do

--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -1,11 +1,13 @@
 {
   "name": "frontend",
   "version": "0.1.0",
+  "proxy": "http://localhost:8080",
   "private": true,
   "dependencies": {
     "@types/node": "^16.18.93",
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.23",
+    "@uiw/react-textarea-code-editor": "^3.0.2",
     "mobx": "^6.12.3",
     "mobx-react-lite": "^4.0.7",
     "react": "^18.2.0",
