--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .DS_Store
 
 # Virtual environment
-adhere/
+.venv
 
 src/google.py
 src/chromedriver
@@ -12,6 +12,11 @@ src/violations.txt
 src/frontend/node_modules
 src/frontend/.pnp
 src/frontend/.pnp.js
+
+# Flask Server
+# dependencies
+**/*__pycache__
+~
 
 # testing
 src/frontend/coverage
