AdHere Web Dashboard (#34)
* placeholder frontend setup

* moved frontend folder to src folder

* ignoring virtual environment

* removed unnecessary boilerplate files and code

* tailwindcss setup

* removed unused dependencies

* delete frontend/gitignore and clear frontend/README

* converted current state of react frontend to typescript

* commented out windows lines for easier development

* user profile path changed for dev

* Updated frontend README.md

* mobx integrated and functional + readme updated

* optimized text toggle with useEffect()

* created Header component

* converted current state of react frontend to typescript (#18)

* converted current state of react frontend to typescript

* commented out windows lines for easier development

* user profile path changed for dev

* Updated frontend README.md

* header done and dark mode working

* set default theme based on user preference

* created component that displays violating sites from json

* table styling done

* MobX integration (#19)

* converted current state of react frontend to typescript

* commented out windows lines for easier development

* user profile path changed for dev

* Updated frontend README.md

* mobx integrated and functional + readme updated

* optimized text toggle with useEffect()

* Create .placeholder

* switched text to display based on textToggle variable

* Implement Ability to Switch between Light and Dark Theme (#23)

* converted current state of react frontend to typescript

* commented out windows lines for easier development

* user profile path changed for dev

* Updated frontend README.md

* mobx integrated and functional + readme updated

* optimized text toggle with useEffect()

* created Header component

* header done and dark mode working

* set default theme based on user preference

* calling google api to get and display recent violating sites

* Getting API key from e

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,36 @@
-/src/chromedriver
-/src/violations.txt
-src/chromedriver.exe
+**/*.DS_Store
 
-**/__pycache__
-**/*.log
-**/*.csv
+# Virtual environment
+**/*venv
+
+src/google.py
+src/chromedriver
+src/violations.txt
+
+# --- Frontend
+# dependencies
+src/frontend/node_modules
+src/frontend/.pnp
+src/frontend/.pnp.js
+
+# Flask Server
+# dependencies
+**/*__pycache__
+~
+
+# testing
+src/frontend/coverage
+
+# production
+src/frontend/build
+
+# misc
+src/frontend/.env
+src/frontend/.env.local
+src/frontend/.env.development.local
+src/frontend/.env.test.local
+src/frontend/.env.production.local
+
+src/frontend/npm-debug.log*
+src/frontend/yarn-debug.log*
+src/frontend/yarn-error.log*
